--- a/vite-project/src/Styles/formulaire.css
+++ b/vite-project/src/Styles/formulaire.css
@@ -1,9 +1,13 @@
-#c-yup{
-  color: tomato;
-  text-align :center;
 
-}
-
-#c-yup:before{
-  /* emoji a mettre ici  */
+.image-bg {
+  position: relative;
+  width: 100%;
+  height: 100%; /* ou n'importe quelle hauteur souhaitée */
+  background-image: url('\koala.jpg'); /* depuis le dossier public */
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
