--- a/vite-project/src/Styles/index.css
+++ b/vite-project/src/Styles/index.css
@@ -7,3 +7,9 @@ html, body, #root {
   width: 100%;
   /* height: 100%; */
 }
+.noscroll {
+  overflow: hidden !important;
+  height: 100vh !important;
+  touch-action: none !important;
+  position: relative;
+}
